Fix cookie notification placement
was not truly at page bottom; if page body is too short to reach window bottom

--- a/assets/invi/partials/_cookies.scss
+++ b/assets/invi/partials/_cookies.scss
@@ -1,6 +1,7 @@
 #cookie-notification {
     background-color: $cp-container-5;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     bottom: 0;
     padding: 8px;
 }
